<resources>
    <!-- Views -->
    <string name="app_name">MT - LED Detection</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="custom">Custom</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tx_data_text_hint">Text to transmit</string>
    <string name="tx_mode">Tx mode</string>
    <string name="tx_rate">Rate (bps)</string>
    <string name="micro_android">Micro-Android</string>
    <string name="android_micro">Android-Micro</string>
    <string name="tx_config">Transmission configuration</string>
    <string name="tx_results">Transmission results</string>
    <string name="rx_data">Received text</string>
    <string name="tx_state">Transmission state</string>
    <string name="tx_accuracy">Transmission accuracy</string>
    <string name="no_info">No information</string>
    <string name="camera_view">Camera view</string>
    <string name="reset">Reset</string>
    <string name="sample_num"># of samples</string>
    <string name="distance">Distance (cm)</string>

    <!-- Toasts -->
    <string name="micro_not_online">Micro is not online!</string>
    <string name="empty_text">Empty text!</string>
    <string name="empty_rate">Empty rate!</string>
    <string name="empty_sampling_rate">Empty sampling rate!</string>
    <string name="rate_not_number">Rate is not a number!</string>
    <string name="sampling_rate_not_number">Sampling rate is not a number!</string>
    <string name="hamming74">Hamming(7,4)</string>
    <string name="on_off_keying">On/Off Keying</string>
    <string name="zoom">Zoom</string>
    <string name="point_at_the_led">Point at the LED</string>

</resources>
