<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@drawable/custom_border">

        <TextView
            android:id="@+id/upperLayoutTitle"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_config"
            android:textColor="#E91E63"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txDataEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="14"
            android:hint="@string/tx_data_text_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toStartOf="@+id/txRateEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperLayoutTitle"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txRateEditText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tx_rate"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txDataEditText" />

        <EditText
            android:id="@+id/txDistanceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/distance"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/samplingRateEditText"
            app:layout_constraintTop_toBottomOf="@+id/txDataEditText" />

        <EditText
            android:id="@+id/samplingRateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:enabled="true"
            android:hint="@string/sample_num"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/txRateEditText"
            app:layout_constraintTop_toBottomOf="@+id/txRateEditText" />

        <LinearLayout
            android:id="@+id/txModeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txDistanceEditText"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tx_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/txModeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/txModeMicroAndroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/micro_android" />

                <RadioButton
                    android:id="@+id/txModeAndroidMicro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_micro" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/txStartButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/resetButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/reset" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/hammingEnabledCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamming74"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txModeLayout"
            app:layout_constraintTop_toTopOf="@+id/txModeLayout" />

        <CheckBox
            android:id="@+id/onOffKeyingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_off_keying"
            app:layout_constraintBottom_toBottomOf="@+id/txModeLayout"
            app:layout_constraintStart_toStartOf="@+id/hammingEnabledCB"
            app:layout_constraintTop_toBottomOf="@+id/hammingEnabledCB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.375"
        android:background="@drawable/custom_border">

        <TextView
            android:id="@+id/centerLayoutTitle"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_results"
            android:textColor="#E91E63"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rx_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/centerLayoutTitle" />

        <TextView
            android:id="@+id/txResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/no_info"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tx_state"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/txStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/no_info"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView7"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tx_accuracy"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/txAccuracyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/no_info"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lowerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.33"
        android:background="@drawable/custom_border">

        <androidx.camera.view.PreviewView
            android:id="@+id/mainCameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lowerLayoutTitle"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_view"
            android:textColor="#E91E63"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/mainCropLayout"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/mainCameraView"
            app:layout_constraintEnd_toEndOf="@+id/mainCameraView"
            app:layout_constraintStart_toStartOf="@+id/mainCameraView"
            app:layout_constraintTop_toTopOf="@+id/mainCameraView"
            app:layout_constraintVertical_bias="0.4">

        </LinearLayout>

        <TextView
            android:id="@+id/mainCropLayoutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_at_the_led"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#E91E63"
            app:layout_constraintEnd_toEndOf="@+id/mainCropLayout"
            app:layout_constraintStart_toStartOf="@+id/mainCropLayout"
            app:layout_constraintTop_toBottomOf="@+id/mainCropLayout" />

        <SeekBar
            android:id="@+id/zoomSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginBottom="10dp"
            android:max="60"
            android:min="10"
            android:progress="30"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="@+id/mainCameraView"
            app:layout_constraintEnd_toEndOf="@+id/mainCameraView"
            app:layout_constraintStart_toStartOf="@+id/mainCameraView" />

        <TextView
            android:id="@+id/zoomTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/zoom"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#E91E63"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/zoomSeekBar"
            app:layout_constraintStart_toEndOf="@+id/zoomSeekBar"
            app:layout_constraintTop_toTopOf="@+id/zoomSeekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>